force-app/main/default/objects/Requirement__c/Requirement__c.object-meta.xml
<CustomObject>
    <description>Phase 2 - Requirement object used to capture requirements for Release Management</description>
    <label>Requirement</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Requirement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>