force-app/main/default/objects/Requirement__c/fields/Data_Set_Required__c.field-meta.xml
<CustomField>
    <fullName>Data_Set_Required__c</fullName>
    <label>Data Set Required</label>
    <length>100</length>
    <type>Text</type>
</CustomField>