force-app/main/default/objects/Requirement__c/fields/QRG_s_tested__c.field-meta.xml
<CustomField>
    <fullName>QRG_s_tested__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If QRG&apos;s require updated/develoment - have they been tested?</inlineHelpText>
    <label>QRG&apos;s tested</label>
    <type>Checkbox</type>
</CustomField>