force-app/main/default/objects/Requirement__c/fields/Requirement_Statement__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Statement__c</fullName>
    <inlineHelpText>- Statement of need/ Description of the Changes</inlineHelpText>
    <label>Requirement Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>