force-app/main/default/objects/Requirement__c/fields/Work_Stream__c.field-meta.xml
<CustomField>
    <fullName>Work_Stream__c</fullName>
    <label>Work Stream</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SALES FINANCE</fullName>
            </value>
            <value>
                <fullName>SALES EXECUTION</fullName>
            </value>
            <value>
                <fullName>DATA QUALITY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>