force-app/main/default/objects/Requirement__c/recordTypes/REQ_BAU_Requirement.recordType-meta.xml
<RecordType>
    <fullName>REQ_BAU_Requirement</fullName>
    <active>true</active>
    <description>Business As Usual Requirement - Considered for Minor Deployment</description>
    <label>BAU Requirement</label>
</RecordType>