force-app/main/default/objects/Requirement__c/recordTypes/REQ_BRS_Requirement.recordType-meta.xml
<RecordType>
    <fullName>REQ_BRS_Requirement</fullName>
    <active>true</active>
    <description>Business Requirement Specification - Considered for Major Deployment</description>
    <label>BRS Requirement</label>
</RecordType>