force-app/main/default/objects/Requirement__c/listViews/BAU_Request_Backlog.listView-meta.xml
<ListView>
    <fullName>BAU_Request_Backlog</fullName>
    <columns>Requirement_ID__c</columns>
    <columns>I_want_to__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Drop__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Drop__c</field>
        <operation>equals</operation>
        <value>Request Backlog</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Requirement__c.REQ_BAU_Requirement</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>BAU - Request Backlog</label>
</ListView>