force-app/main/default/objects/Requirement__c/listViews/BAU_thisweeksdrop.listView-meta.xml
<ListView>
    <fullName>BAU_thisweeksdrop</fullName>
    <columns>Requirement_ID__c</columns>
    <columns>Drop__c</columns>
    <columns>I_want_to__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Drop__c</field>
        <operation>equals</operation>
        <value>drop 021</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed No Action Required</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Requirement__c.REQ_BAU_Requirement</value>
    </filters>
    <label>BAU - This weeks drop</label>
</ListView>