force-app/main/default/objects/Requirement__c/listViews/BAU_Which_Drop.listView-meta.xml
<ListView>
    <fullName>BAU_Which_Drop</fullName>
    <columns>NAME</columns>
    <columns>I_want_to__c</columns>
    <columns>Drop__c</columns>
    <columns>Drop_Release_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Solution_Approved_for_Drop__c</columns>
    <columns>Change_Included_in_Release_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Drop__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Requirement__c.REQ_BAU_Requirement</value>
    </filters>
    <label>BAU Which Drop</label>
</ListView>