force-app/main/default/objects/Requirement__c/listViews/BRS_All_Reqe.listView-meta.xml
<ListView>
    <fullName>BRS_All_Reqe</fullName>
    <columns>Legacyid__c</columns>
    <columns>Requirement_ID__c</columns>
    <columns>Workshop_Group__c</columns>
    <columns>Requirement_Statement__c</columns>
    <columns>Revised_Requirement_Statement__c</columns>
    <columns>Status__c</columns>
    <columns>BPMN_Required__c</columns>
    <columns>BA_Assigned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Requirement__c.REQ_BRS_Requirement</value>
    </filters>
    <label>BRS - All Req</label>
</ListView>