force-app/main/default/objects/Requirement__c/listViews/BRS_BPMN_Required.listView-meta.xml
<ListView>
    <fullName>BRS_BPMN_Required</fullName>
    <columns>Workshop_Group__c</columns>
    <columns>Legacyid__c</columns>
    <columns>Requirement_ID__c</columns>
    <columns>BPMN_Required__c</columns>
    <columns>Requirement_Statement__c</columns>
    <columns>Status__c</columns>
    <columns>BA_Assigned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Requirement__c.REQ_BRS_Requirement</value>
    </filters>
    <filters>
        <field>BPMN_Required__c</field>
        <operation>equals</operation>
        <value>Required,In progress,Awaiting Sign Off,Complete</value>
    </filters>
    <label>BRS - BPMN Required</label>
</ListView>