force-app/main/default/objects/Requirement__c/listViews/My_Active_Requirements.listView-meta.xml
<ListView>
    <fullName>My_Active_Requirements</fullName>
    <columns>Requirement_ID__c</columns>
    <columns>Related_Object__c</columns>
    <columns>I_want_to__c</columns>
    <columns>Proposed_Solution__c</columns>
    <columns>Drop__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Overall_Time_Estimate__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Requirement__c.REQ_BAU_Requirement</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>My Requirements</label>
</ListView>