force-app/main/default/objects/Requirement__c/listViews/Open_Requirements.listView-meta.xml
<ListView>
    <fullName>Open_Requirements</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>I_want_to__c</columns>
    <columns>Status__c</columns>
    <columns>Related_Object__c</columns>
    <columns>Drop__c</columns>
    <columns>Overall_Time_Estimate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete,Deployed,Closed No Action Required,Seeded as an Idea</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Requirement__c.REQ_BAU_Requirement</value>
    </filters>
    <filters>
        <field>Requirement_ID__c</field>
        <operation>notContain</operation>
        <value>BRS</value>
    </filters>
    <label>Open Requirements</label>
</ListView>